PlzNav: Moved visibility update in renderFrameManager.

The call that triggered the widget to be displayed in a reload was
placed in RenderFrameHostManager::CommitPendingIfNecessary which was
not reached in all cases (after a crash for example). Moved it to
RenderFrameHostManager::GetFrameHostForNavigation which is always
called.

Bug: 767394
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: Ifbbc54af972c6b7d36d28420b35f3743f1d6e568
Reviewed-on: https://chromium-review.googlesource.com/730009
Reviewed-by: Camille Lamy <clamy@chromium.org>
Commit-Queue: Arthur Hemery <ahemery@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510423}
Former-commit-id: b320a1bb07a05c28d56a0b80e307d3dfdc169ca9